--- a/views/parentActivation.hbs
+++ b/views/parentActivation.hbs
@@ -20,7 +20,7 @@
         <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
           <tr>
             <td align="left" bgcolor="#ffffff" style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
-              <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Confirm Your Email Address</h1>
+              <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Greetings from Story Squad HQ!</h1>
             </td>
           </tr>
         </table>
@@ -46,7 +46,11 @@
           <!-- start copy -->
           <tr>
             <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-              <p style="margin: 0;">Tap the button below to confirm your email address. If you didn't create an account with <a href="#">Story Squad</a>, you can safely delete this email.</p>
+              <p style="margin: 0;">${firstname} needs your permission to enter their creative writing to enter their story in our <a href="#">Free Daily Story Contest</a>.</p>
+
+              <p style="margin: 0;">Tap the button below to verify that you have received our <a href="#">Privacy Policy and Terms of Service</a>, and grant permission for ${firstname} to submit their original creative work across our suite of <a href="#">Story Squad</a> applications, including <a href="#">Classroom Rumble</a> and our <a href="#">Free Daily Story Contest</a>.</p>
+
+              <p style="margin: 0;">Story Squad is, and always will be, a safe and secure community for kids to discover, learn, and be creative. We work tirelessly to ensure that your children’s data is protected, and that your children will never come across third-party ads on our platform. Unlike many apps for kids, we aim to use small servings of screen-time to drive kids back into “imagination mode” offline with loose leaf paper and pencil in hand. Careful human content moderation is the heart of Story Squad’s brand and is what sets us apart from other popular edtech services for children.</p>
             </td>
           </tr>
           <!-- end copy -->
@@ -60,7 +64,7 @@
                     <table border="0" cellpadding="0" cellspacing="0">
                       <tr>
                         <td align="center" bgcolor="#1a82e2" style="border-radius: 6px;">
-                          <a href="{{ url }}" target="_blank" style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Activate Email</a>
+                          <a href="{{ url }}" target="_blank" style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Verify Account</a>
                         </td>
                       </tr>
                     </table>
@@ -111,7 +115,7 @@
           <!-- start permission -->
           <tr>
             <td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
-              <p style="margin: 0;">You received this email because we received a request to activate your account. If you didn't request activation you can safely delete this email. There is no need to unsubscribe.</p>
+              <p style="margin: 0;">You received this email because we received a request to activate ${firstname}’s account. If your child didn't request activation you can safely delete this email. There is no need to unsubscribe.</p>
             </td>
           </tr>
           <!-- end permission -->
