--- a/templates/email/parentActivation.hbs
+++ b/templates/email/parentActivation.hbs
@@ -54,7 +54,7 @@
 
               <br /><br />
 
-              <p style="margin: 0;">Story Squad is, and always will be, a safe and secure community for kids to discover, learn, and be creative. We work tirelessly to ensure that your children’s data is protected, and that your children will never come across third-party ads on our platform. Unlike many apps for kids, we aim to use small servings of screen-time to drive kids back into “imagination mode” offline with loose leaf paper and pencil in hand. Careful human content moderation is the heart of Story Squad’s brand and is what sets us apart from other popular edtech services for children.</p>
+              <p style="margin: 0;">Story Squad is, and always will be, a safe and secure community for kids to discover, learn, and be creative. We work tirelessly to ensure that your children’s data is protected, and that your children will never come across third-party ads on our platform. Unlike many apps for kids, we aim to use small servings of screen-time to drive kids back into “imagination mode” offline with paper and a pencil in hand. Careful human content moderation is the heart of Story Squad’s brand and is what sets us apart from other popular edtech services for children.</p>
             </td>
           </tr>
           <!-- end copy -->
